5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1674_1100.log
== TEST (2019-04-23 13:48:52) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa"):
else:
	print(b,"invalido")
-- ERROR:
File "XXXX", line 18
    print(b,"Garoupa"):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:49:03) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:49:28) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:49:38) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:49:43) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:49:50) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:50:33) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:50:57) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garça")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:51:53) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:52:24) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:52:29) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:52:35) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:52:38) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onça-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:52:49) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onca-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:53:00) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onca-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:53:05) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onca-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"invalido")
-- EXECUTION TIME:
0.12838
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:54:06) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onca-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"Invalido")
-- EXECUTION TIME:
0.209808
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 18:12:56) 
-- CODE:
v = int(input("valor de entrada:"))
a = "Entrada: "
b = "Animal: "

print(a,v)

if(v==2):
	print(b,"Tartaruga")
elif(v==5):
	print(b,"Garca")
elif(v==10):
	print(b,"Arara")
elif(v==20):
	print(b,"Mico-leao-dourado")
elif(v==50):
	print(b,"Onca-pintada")
elif(v==100):
	print(b,"Garoupa")
else:
	print(b,"Invalido")
-- EXECUTION TIME:
0.173033
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
